# Allen_Repository

./: README.md
AWS Academy Cloud Architecting/: README.md
AWS Deep Racer/: reward_function.py
AWS-Academy-Cloud-Foundations/: README.md
Adventure/: README.md  SuperAdventure.sln
Adventure/Adventure/: Program.cs  SuperAdventure.Designer.cs  SuperAdventure.cs  SuperAdventure.csproj  TradingScreen.Designer.cs  TradingScreen.cs  WorldMap.cs
Adventure/Engine/: Engine.csproj  InventoryItem.cs  LivingCreature.cs  Location.cs  LootItem.cs  Monster.cs  Player.cs  PlayerDataMapper.cs  PlayerQuest.cs  Quest.cs  QuestCompletionItem.cs  RandomNumberGenerator.cs  Vendor.cs  World.cs
Adventure/SuperAdventureConsole/: Program.cs  SuperAdventureConsole.csproj
Backend Project/DrivingSchoolManagementSystem/: pom-war.xml  pom.xml  readme.md
CS 5001 Foundations of Computer Science(Python)/Coding Practice Module 10/: completed.py  either.py  get_dictionary_string.py  get_key_string.py  get_value_string.py  initialize.py  make_list_set.py  make_string_set.py  needs_5001.py  needs_5002.py
CS 5001 Foundations of Computer Science(Python)/Coding Practice Module 3/: area_triangle.py  build_string.py  equal.py  first.py  grade.py  isEven.py  line.py  lyrics.py  plus.py  to_string.py  volume_sphere.py
CS 5001 Foundations of Computer Science(Python)/Coding Practice Module 4/: calculations.py  count_down.py  count_up.py  debug.py  menu.py  multiples.py  non_negatives.py  print_evens.py  read_words.py  remove_break.py
CS 5001 Foundations of Computer Science(Python)/Coding Practice Module 5/: add_spaces.py  convert_tuple.py  diagonal_string.py  extract_letter.py  fibonacci.py  list_to_string.py  to_numbers.py  (+3 more)
CS 5330 Computer Vision and Pattern Recognition/Projects/ProjectFour/Archive/: CMakeLists.txt  ar_3d_pointcloud.cpp  ar_two_cups.cpp  calibrateCameraExample.cpp  detectCorners.cpp
CS 5330 Computer Vision and Pattern Recognition/Projects/ProjectFour/Archive/__MACOSX/: ._ar_two_cups.cpp
CS 5330 Computer Vision and Pattern Recognition/Projects/ProjectTwo/: CMakeLists.txt  README.md  baseline.cpp  blue_bin_extension.cpp  compare_dnn_classic.cpp  csv_util.cpp  csv_util.h  custom_cbir.cpp  dnn_embeddings.cpp  features.cpp  features.h  histogram_matching.cpp  main.cpp  multi_histogram.cpp  texture_color.cpp
HostelAccommodation/: Hostel.txt  Student.txt
RateYourEX/: README.md
hostelAccommodation-withFileHandling/: Hostel Accommodation.cpp  README.md
(+715 files in other folders)
